# semaphore-mcp

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  LICENSE  PR_BODY.md  PUBLISHING.md  README.md  RELEASE_GUIDE.md  TESTING.md  docker-compose.test.yml  organization-refactor-plan.md  pyproject.toml  requirements.txt
.github/workflows/: container-publish.yml  generate-token.sh  pr-container.yml  publish.yml  release-and-publish.yml  release.yml  test-mcp-integration.yml  test-published.yml  test.yml
scripts/: generate-token.sh  run-e2e-tests.sh  start_server.py
src/semaphore_mcp/: api.py  config.py  server.py
src/semaphore_mcp/tools/: __init__.py  access_keys.py  base.py  environments.py  events.py  project_users.py  projects.py  repositories.py  schedules.py  tasks.py  templates.py  views.py
tests/: conftest.py  test_api_client.py  test_api_comprehensive.py  test_config.py  test_environment_tools_coverage.py  test_mcp_server.py  test_server_coverage.py  test_task_tools_coverage.py
tests/e2e/: README.md  __init__.py  conftest.py  helpers.py  mcp_inspector.py  test_access_keys_e2e.py  test_comprehensive_scenario.py  test_environments_e2e.py  test_events_e2e.py  test_project_backups_e2e.py  test_project_users_e2e.py  test_projects_e2e.py  test_repositories_e2e.py  test_schedules_e2e.py  test_task_execution_e2e.py  test_tasks_e2e.py  test_templates_e2e.py  test_tool_registration.py  test_views_e2e.py
tests/tools/: test_access_keys.py  test_base.py  test_environments.py  test_events.py  test_project_users.py  test_projects.py  test_repositories.py  test_schedules.py  test_tasks.py  test_templates.py  test_views.py
