[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semaphore-mcp"
version = "0.1.0"
authors = [
    {name = "SemaphoreMCP Team"},
]
description = "Model Context Protocol (MCP) for SemaphoreUI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/username/semaphore-mcp"
"Bug Tracker" = "https://github.com/username/semaphore-mcp/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
