[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semaphore-mcp"
version = "0.1.0"
authors = [
    {name = "SemaphoreMCP Team"},
]
description = "Model Context Protocol (MCP) for SemaphoreUI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/username/semaphore-mcp"
"Bug Tracker" = "https://github.com/username/semaphore-mcp/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py39']